--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cookie-parser": "^1.4.7",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -73,6 +74,7 @@
     "openid-client": "^6.8.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
